# lvgl-pm

./: .gitmodules  CMakeLists.txt  LICENSE  README-en.md  README.md
examples/: CMakeLists.txt
examples/helloworld/: main.c
examples/helloworld/page/page1/: page1.c
examples/helloworld/page/page2/: page2.c  page2.h
examples/popup/: main.c
examples/popup/page/popup/: CLOSE.c  popup.c  popup.h
examples/target_self/: main.c
examples/target_self/page/page1/: page1.c  page1.h
examples/target_self/page/page2/: page2.c
src/: anima.c  anima.h  pm.c  pm.h  pm_utils.c  pm_utils.h
